page bon plan en cours

--- a/bons plans.html
+++ b/bons plans.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/croisiere mediterranee.css">
-    <title>Yucantan</title>
+    <link rel="stylesheet" href="CSS/bon plans.css">
+
+    <title>VeggiLand</title>
 </head>
 
 <body>
@@ -51,67 +52,116 @@
         </nav>
     </header>
     <main>
-        <img class="image_presentation" src="img/Alaska.webp" alt="alaska" titre="alaska">
-        
-            <h1>Camping en Alaska</h1>
-            <p>Présentation</p>
-        <div id="presentation">
-            <p>Arrêtez-vous, ne serait-ce qu'un instant et admirez ces vues... Comme le suggèrent les différentes photos, la vue est d'une beauté renversante à toutes heures pour le plaisir des yeux des visiteurs de Northern Nights Campground and RV Park.</p>
-            <p>En journée (lorsque le ciel n'est pas trop nuageux), les vues depuis ce camping rural de Glennallen laissent apercevoir trois chaînes de montagnes très importantes de l'Alaska. Plus tard, alors que le soleil se noie progressivement dans la ligne d'horizon, croisez les doigts pour que ces cieux immenses permettent de contempler un magnifique coucher de soleil avant de totalement s'obscurcir et laisser la place à de jolies étoiles.</p>
-            <p>Aussi tentant que cela puisse paraître, il est peu probable que vous ayez envie de passer toute la journée assis dans un coin du site, occupé à contempler la vue, et cela ne pouvait pas mieux tomber avec ce site qui est commodément situé à l'intersection de deux axes routiers majeurs (1 et 4)... Par conséquent, vous n'aurez aucun mal pour effectuer vos déplacements depuis ce site. Apportez vos cannes pour essayer d'attraper du saumon dans la rivière Copper, enfilez vos bottes pour des randonnées jusqu'au parc national et réserve de Wrangell-St. Elias, ou laissez grimper le niveau d'adrénaline avec des virées de rafting, des randonnées dans les glaciers et des excursions d'observation dans les airs.</p>
-            <p>Une fois de retour sur le site (propriété d'une famille de natifs d'Alaska qui a la gérance du site), tous les essentiels sont bien en place : il y a du wifi, une laverie, un espace vaisselle et un bloc sanitaire avec des toilettes et des douches fonctionnant avec des jetons.</p>
-            <p>Venez ici en été pour profiter de soirées conviviales régulièrement organisées autour du feu de camp, afin de papoter avec les autres voyageurs et savourer des desserts gratuits. Il y a des tables de pique-nique pour les autres repas, avec des provisions d'épicerie à cinq minutes de route seulement.</p>
-        </div>
-        <div class="detail">
-            <div class="flex-row">
-                <img class="petit_image" src="img/thematique-environnement.jpg" alt="thématique" titre="thématique">
-                <p>
-                    Caractéristique : Chiens acceptés, Feux de camp autorisés, Unité / emplacement avec wifi, Voiture acceptés, Stationnement près de l'emplacement, Point d'élimination des produits chimiques
-                </p>
-            </div>
-            <div class="flex-row">
-                <img class="petit_image" src="img/argent.jpg" alt="argent" titre="argent">
-                <p>
-                    A partir de 25€
-                </p>
-                <p>
-                    inclus
-                </p>
-                <p>
-                    non inclus
-                </p>
-            </div>
-            <div class="flex-row">
-                <div class="flex-row-inline">
-                    <img class="petit_image" src="img/petit calendrier.jpg" alt="calendrier" titre="calendrier">
-                    <p>
-                        De 1 à 64 nuits
-                    </p>
-                </div>
-                <div class="flex-row-inline">
-                    <img class="petit_image" src="img/avion.jpg" alt="bateau" titre="bateau">
-                    <p>
-                        Vol non compris
-                    </p>
-                </div>
-            </div>
-        </div>
-        <h2>
-            Les points fort
-        </h2>
-        <div>
-            <p>Propriété d'autochtones d'Alaska à Glennallen avec des vues splendides</p>
-            <p>En été, soirées dessert gratuit conviviales autour du feu de camp</p>
-            <p>Parc national et réserve nationale de Wrangell-Saint-Élie à 10 min</p>
-        </div>
-        
-        <aside>
-        <h3>Intéressé(es) ?</h3>
-        <button>
-            <a href="devis.html" target="_blank"> Je demande un devis</a>
-         </button>
-        </aside>
-
+        <h1>
+            Les bons plans
+        </h1>
+        <section id="croisiere">
+            <h2>
+                Les Croisières
+            </h2>
+            <div class="categorie">
+            <a href="croisiere mediterranee.html" class="offre">
+                <figure>
+                    <img src="img/mediterranee.jpg" alt="mediterranee" title="mediterranee">
+                    <figcaption>
+                        Croisière Italie, Espagne, France
+                    </figcaption>
+                </figure>
+            </article>
+            <article class="offre img_factice">
+                <figure>
+                    <a href="croisiere mediterranee.html">Découvrir</a>
+                    <img src="img/mediterranee.jpg" alt="mediterranee" title="mediterranee">
+                    <figcaption>
+                        Croisière Italie, Espagne, France
+                        <a href="croisiere mediterranee.html">Découvrir</a>
+                    </figcaption>
+                </figure>
+            </article>
+        </div>          
+        </section>
+        <div class="separation"></div>
+        <section id="sejour">
+            <h2>
+                Les Séjours
+            </h2>
+            <div class="categorie">
+            <article class="offre">
+                <figure>
+                    <a href="yucatan.html">Découvrir</a>
+                    <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
+                    <figcaption>
+                        Séjour au Yucatan
+                        <a href="yucatan.html">Découvrir</a>
+                    </figcaption>
+                </figure>
+            </article>
+            <article class="offre img_factice">
+                <figure>
+                    <a href="yucatan.html">Découvrir</a>
+                    <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
+                    <figcaption>
+                        Séjour au Yucatan
+                        <a href="yucatan.html">Découvrir</a>
+                    </figcaption>
+                </figure>
+            </article>
+        </div>              
+        </section>
+        <div class="separation"></div>
+        <section id="camping">
+            <h2>
+                Les Campings
+            </h2>
+            <div class="categorie">
+            <article class="offre">
+                <figure>
+                    <a href="camping alaska.html">Découvrir</a>
+                    <img src="img/Etats-Unis camping.jpg" alt="alaska" title="alaska">
+                    <figcaption>
+                        Camping en Alaska
+                        <a href="camping alaska.html">Découvrir</a>
+                    </figcaption>
+                </figure>
+            </article>
+            <article class="offre img_factice">
+                <figure>
+                    <a href="camping alaska.html">Découvrir</a>
+                    <img src="img/Etats-Unis camping.jpg" alt="alaska" title="alaska">
+                    <figcaption>
+                        Camping en Alaska
+                        <a href="camping alaska.html">Découvrir</a>
+                    </figcaption>
+                </figure>
+            </article>
+        </section>
+        <div class="separation"></div>
+        <section id="visite_guidee">
+            <h2>
+                Les Visites Guidées
+            </h2>
+            <div class="categorie">
+            <article class="offre">
+                <figure>
+                    <a href="chichen itza.html">Découvrir</a>
+                    <img src="img/El-Castillo-Chichen-Itza.jpg" alt="Chichen itza" title="chichen itza">
+                    <figcaption>
+                        Visite guidée de Chichen Itza
+                        <a href="chichen itza.html">Découvrir</a>
+                    </figcaption>
+                </figure>
+            </article>
+            <article class="offre img_factice">
+                <figure>
+                    <a href="chichen itza.html">Découvrir</a>
+                    <img src="img/El-Castillo-Chichen-Itza.jpg" alt="Chichen itza" title="chichen itza">
+                    <figcaption>
+                        Visite guidée de Chichen Itza
+                        <a href="chichen itza.html">Découvrir</a>
+                    </figcaption>
+                </figure>
+            </article>
+        </section>
     </main>
     <footer>
         <div class="grid">
@@ -142,4 +192,5 @@
     </footer>
 </body>
 <script src="JS/header.js"></script>
+
 </html>
