page cassé chichen itza reparée

--- a/chichen itza.html
+++ b/chichen itza.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,103 +8,138 @@
     <link rel="stylesheet" href="css/chichen itza.css">
     <title>Mexique</title>
 </head>
-<body >
-    <header>
-        <header>
-            <a href="index.html" class="logo">
-                <img src="img/V.png" alt="logo" title="VeggiLand">
-                <H1>VeggiLand</H1>
-            </a>
-            <div id="compte_agence">
-                <a href="mon compte.html"><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
-                <a href="#nous_trouver"><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
-            </div>
-            <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
-            <div class="break"></div>
-            <nav>
-                <label for="mobile">
-                    <img id="burger" src="img/burger_icon.svg" alt="menu_burger">
-                </label>
-                <input type="checkbox" name="mobile" id="mobile" role="button">
-                <div id="menu_cache">
-                    <ul>
-                        <li><a href="mon compte.html" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
-                        <li><a href="croisiere.html" class="bouton_lien">Croisières</a></li>
-                        <li><a href="sejour.html" class="bouton_lien">Séjour</a></li>
-                        <li><a href="camping.html" class="bouton_lien">Camping</a></li>
-                        <li><a href="visites_guidees.html" class="bouton_lien">Visites&nbsp;guidées</a></li>
-                        <li><a href="location.html" class="bouton_lien">Location</a></li>
-                        <li class="deroulant">
-                            <p>Pays</p>
-                            <ul class="sous_menu">
-                                <li><a href="etats-unis.html" class="bouton_lien">Etats-Unis</a></li>
-                                <li><a href="france.html" class="bouton_lien">France</a></li>
-                                <li><a href="mexique.html" class="bouton_lien">Mexique</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="bons plans.html" class="bouton_lien">Bons&nbsp;plans</a></li>
-                        <li><a href="tel:+33948141516" class="bouton_lien bouton_telephone"><img src="img/telephone.jpg">0948141516</a>
-                        </li>
-                    </ul>
-                </div>
-                <div id="overlay"></div>
-            </nav>
-        </header>
-        <main class="container">
-    <section class="item texte1">
-       <p>Chichen Itzà : La Majestueuse
-        On ne la présente plus… Site maya le plus visité du Mexique, Chichen-Itzà est considéré comme le «Versailles du Yucatán» ! Oui oui rien que ça !
-        
-        Le site a été classé au Patrimoine Mondial de l’UNESCO en 1988, et a été élu, en 2007, comme l’une des sept merveilles du monde… </p>
-       <p>D’une taille considérable et très touristique, le site est bien balisé et vous accéderez aux différentes parties du lieu très facilement.
 
-        Outre la magnifique pyramide principale « Kukulkan », célèbre dans le monde entier de par son excellent état de conservation et représentant un serpent à plumes, vous y découvrirez différents types d’architecture maya tous plus beaux les uns que les autres : l’immense jeu de balle, l’observatoire astronomique, et le très ornementé couvent présentant tous des architectures très différentes…</p>
-        <p>L’histoire du site est très controversée mais il semblerait que ce lieu, grande capitale maya, ait connu trois vagues de peuplement qui en font sa richesse archéologique et historique…
-        Outre « Kukulkan » et les autres monuments, vous trouverez, aussi, tout au nord du site, le fameux Cénote Sacré de Chichen Itza ! Entièrement à ciel ouvert, ce dernier était utilisé à des fins de sacrifices, notamment humains, en l’honneur des Dieux durant les cérémonies religieuses mayas. De nombreux objets et squelettes y ont d’ailleurs été retrouvés lors de fouilles archéologiques…
-        Et si le cœur vous en dit vous pourrez même vous y baigner !</p>
-        <button>
-           <a href="devis.html" target="_blank"> Je demande un devis</a>
-        </button>
-        <img src="img/Fotolia.jpg" class="fotolia" alt="fotolia">
-    </section>
-    <aside class="item texte2">
-      <h2>CHICHEN ITZA </h2>
-      <img class="itza" src="img/El-Castillo-Chichen-Itza.jpg" alt="El-Castillo-Chichen-Itza">
-      <div class="container1">
-        <div class="item">Malheureusement, tous les chemins d’accès aux différentes parties du site de Chichen Itza sont jalonnés de dizaines de vendeurs de souvenirs qui vous hèlent à votre passage. Pour éviter cela, arrivez à l’ouverture, ils organisent leurs étales et ne feront pas attention à vous… Mais malgré tout pas d’inquiétude, ils sont plutôt gentils et agréables et ne vous gâcheront pas la visite outre mesure… <br><hr> <br><hr></div>
-        <div class="item">L’entrée au site est, quant à elle, assez chère comparativement aux autres sites mayas. Comptez une vingtaine de pesos mexicains pour le stationnement soit 1,20 euros et pas moins 145$MX pour l’entrée sur le site, soit 8,25 euros par personne environ. : <br><hr> <br><hr></div>
-        <div class="item">Sachez en outre qu’il vous faudra aussi payer une taxe pour les appareils photo et autres cameras… : <br><hr>  <br><hr></div>
-        <div class="item">Petit conseil : Pour profiter au maximum de cette Merveille du Monde (et éviter les touristes -bien trop nombreux-), nous vous conseillons grandement de réserver une visite guidée au lever du soleil (Transport + Guide + Billet d’entrée). <br><hr> <br><hr> <strong class="bonne_visite">BONNE VISITE</strong class="bonne_visite"></div>
-    </div>
-    </aside>
+<body>
+    <header>
+        <a href="index.html" class="logo">
+            <img src="img/V.png" alt="logo" title="VeggiLand">
+            <H1>VeggiLand</H1>
+        </a>
+        <div id="compte_agence">
+            <a href="mon compte.html"><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
+            <a href="#nous_trouver"><img src="img/geolocalisation.jpg" alt="geolocalisation"
+                    title="geolocalisation">Agences</a>
+        </div>
+        <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
+        <div class="break"></div>
+        <nav>
+            <label for="mobile">
+                <img id="burger" src="img/burger_icon.svg" alt="menu_burger">
+            </label>
+            <input type="checkbox" name="mobile" id="mobile" role="button">
+            <div id="menu_cache">
+                <ul>
+                    <li><a href="mon compte.html" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon
+                            compte</a></li>
+                    <li><a href="croisiere.html" class="bouton_lien">Croisières</a></li>
+                    <li><a href="sejour.html" class="bouton_lien">Séjour</a></li>
+                    <li><a href="camping.html" class="bouton_lien">Camping</a></li>
+                    <li><a href="visites_guidees.html" class="bouton_lien">Visites&nbsp;guidées</a></li>
+                    <li><a href="location.html" class="bouton_lien">Location</a></li>
+                    <li class="deroulant">
+                        <p>Pays</p>
+                        <ul class="sous_menu">
+                            <li><a href="etats-unis.html" class="bouton_lien">Etats-Unis</a></li>
+                            <li><a href="france.html" class="bouton_lien">France</a></li>
+                            <li><a href="mexique.html" class="bouton_lien">Mexique</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="bons plans.html" class="bouton_lien">Bons&nbsp;plans</a></li>
+                    <li><a href="tel:+33948141516" class="bouton_lien bouton_telephone"><img
+                                src="img/telephone.jpg">0948141516</a>
+                    </li>
+                </ul>
+            </div>
+            <div id="overlay"></div>
+        </nav>
+    </header>
+    <main class="container">
+        <section class="item texte1">
+            <p>Chichen Itzà : La Majestueuse
+                On ne la présente plus… Site maya le plus visité du Mexique, Chichen-Itzà est considéré comme le
+                «Versailles du Yucatán» ! Oui oui rien que ça !
+
+                Le site a été classé au Patrimoine Mondial de l’UNESCO en 1988, et a été élu, en 2007, comme l’une des
+                sept merveilles du monde… </p>
+            <p>D’une taille considérable et très touristique, le site est bien balisé et vous accéderez aux différentes
+                parties du lieu très facilement.
+
+                Outre la magnifique pyramide principale « Kukulkan », célèbre dans le monde entier de par son excellent
+                état de conservation et représentant un serpent à plumes, vous y découvrirez différents types
+                d’architecture maya tous plus beaux les uns que les autres : l’immense jeu de balle, l’observatoire
+                astronomique, et le très ornementé couvent présentant tous des architectures très différentes…</p>
+            <p>L’histoire du site est très controversée mais il semblerait que ce lieu, grande capitale maya, ait connu
+                trois vagues de peuplement qui en font sa richesse archéologique et historique…
+                Outre « Kukulkan » et les autres monuments, vous trouverez, aussi, tout au nord du site, le fameux
+                Cénote Sacré de Chichen Itza ! Entièrement à ciel ouvert, ce dernier était utilisé à des fins de
+                sacrifices, notamment humains, en l’honneur des Dieux durant les cérémonies religieuses mayas. De
+                nombreux objets et squelettes y ont d’ailleurs été retrouvés lors de fouilles archéologiques…
+                Et si le cœur vous en dit vous pourrez même vous y baigner !</p>
+            <button>
+                <a href="devis.html" target="_blank"> Je demande un devis</a>
+            </button>
+            <img src="img/Fotolia.jpg" class="fotolia" alt="fotolia">
+        </section>
+        <aside class="item texte2">
+            <h2>CHICHEN ITZA </h2>
+            <img class="itza" src="img/El-Castillo-Chichen-Itza.jpg" alt="El-Castillo-Chichen-Itza">
+            <div class="container1">
+                <div class="item">Malheureusement, tous les chemins d’accès aux différentes parties du site de Chichen
+                    Itza sont jalonnés de dizaines de vendeurs de souvenirs qui vous hèlent à votre passage. Pour éviter
+                    cela, arrivez à l’ouverture, ils organisent leurs étales et ne feront pas attention à vous… Mais
+                    malgré tout pas d’inquiétude, ils sont plutôt gentils et agréables et ne vous gâcheront pas la
+                    visite outre mesure… <br>
+                    <hr> <br>
+                    <hr>
+                </div>
+                <div class="item">L’entrée au site est, quant à elle, assez chère comparativement aux autres sites
+                    mayas. Comptez une vingtaine de pesos mexicains pour le stationnement soit 1,20 euros et pas moins
+                    145$MX pour l’entrée sur le site, soit 8,25 euros par personne environ. : <br>
+                    <hr> <br>
+                    <hr>
+                </div>
+                <div class="item">Sachez en outre qu’il vous faudra aussi payer une taxe pour les appareils photo et
+                    autres cameras… : <br>
+                    <hr> <br>
+                    <hr>
+                </div>
+                <div class="item">Petit conseil : Pour profiter au maximum de cette Merveille du Monde (et éviter les
+                    touristes -bien trop nombreux-), nous vous conseillons grandement de réserver une visite guidée au
+                    lever du soleil (Transport + Guide + Billet d’entrée). <br>
+                    <hr> <br>
+                    <hr> <strong class="bonne_visite">BONNE VISITE</strong class="bonne_visite">
+                </div>
+            </div>
+        </aside>
     </main>
     <footer>
         <div class="grid">
             <form id="newsletter" action="post" for="machin.php">
-            <label for="mail">Recevez votre newsletter</label>
-            <div>
-            <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail">
-            <input type="submit" value="OK">
-            </div>
+                <label for="mail">Recevez votre newsletter</label>
+                <div>
+                    <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail">
+                    <input type="submit" value="OK">
+                </div>
             </form>
             <div id="informations_agence">
-            <p>
-                Informations agence
-            </p>
-            <a href="#">Nous connaitre</a>
-            <a href="#">Nos partenaires</a>
-            <a href="#">Nos brochures</a>
+                <p>
+                    Informations agence
+                </p>
+                <a href="#">Nous connaitre</a>
+                <a href="#">Nos partenaires</a>
+                <a href="#">Nos brochures</a>
             </div>
             <a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
             <a href="#" id="Nos_formules">Nos formules / Offres</a>
             <a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
             <div id="paiements">
-            <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
-            <img src="img/ancv.png"  alt="ancv" title="ancv">
+                <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
+                <img src="img/ancv.png" alt="ancv" title="ancv">
             </div>
-            </div>
-            <p>Copyright</p>
-            </footer> 
-        </body>
-        <script src="JS/header.js"></script>
+        </div>
+        <p>Copyright</p>
+    </footer>
+</body>
+<script src="JS/header.js"></script>
+
 </html>
