rajout image et texte page france

--- a/france.html
+++ b/france.html
@@ -53,16 +53,16 @@
     </header>
     <main>
         <h1>
-            France
+            Départ de la France
         </h1>
-        <img src="img/calanques.jpeg" alt="loop" titre="bateau loop" id="presentation">
+        <img src="img/mediterraneo-occidentale.webp" class="mediterranee" alt="loop" titre="mediterraneo-occidentale" id="presentation">
         <section id="croisiere" class="categorie">
             <article class="offre">
                 <figure>
                     <a href="">Découvrir</a>
-                    <img src="img/Loop-Loop.jpg" alt="Calanques1" title="Calanques1">
+                    <img src="img/Loop-Loop.jpg" alt="Loop-Loop" title="Loop-Loop">
                     <figcaption>
-                        Un bateau conçu pour limiter son impact environnemental
+                     Voguez sur le LOOP LOOP, bateau conçu pour limiter son impact environnemental
                         <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
@@ -70,9 +70,9 @@
             <article class="offre img_factice">
                 <figure>
                     <a href="">Découvrir</a>
-                    <img src="img/presqu'ile de giens.jpg" alt="presqu'ile de giens" title="presqu'ile de giens">
+                    <img src="img/Loop-Loop.jpg" alt="Loop-Loop" title="Loop-Loop">
                     <figcaption>
-                        BALADE DÉCOUVERTE : INITIATION AU PROGRAMME DE SCIENCE PARTICIPATIVE BIOLIT
+                        Loop-Loop
                         <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
@@ -81,20 +81,20 @@
         <section id="sejour" class="categorie">
             <article class="offre">
                 <figure>
-                    <a href="yucatan.html">Découvrir</a>
-                    <img src="img/presqu'ile de giens.jpg" alt="yucatan" title="yucatan">
+                    <a href="">Découvrir</a>
+                    <img src="img/marseille.webp" alt="marseille" title="marseille">
                     <figcaption>
-                        BALADE DÉCOUVERTE : INITIATION AU PROGRAMME DE SCIENCE PARTICIPATIVE BIOLIT
-                        <a href="yucatan.html">Découvrir</a>
+                        Marseille le front de mer et les calanques, les musées.
+                        <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
             <article class="offre img_factice">
                 <figure>
                     <a href="">Découvrir</a>
-                    <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
+                    <img src="img/Loop-Loop.jpg" alt="Loop-Loop" title="Loop-Loop">
                     <figcaption>
-                        Le Yucatan jusqu'à l'île Holbox
+                        Loop-Loop
                         <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
@@ -104,9 +104,9 @@
             <article class="offre">
                 <figure>
                     <a href="">Découvrir</a>
-                    <img src="img/mahahual la nature à l'état sauvage.jpg" alt="mahalual" title="mahalual">
+                    <img src="img/savona.webp" alt="savona" title="savona">
                     <figcaption>
-                        Mahahuai la nature à l’état sauvage
+                        Savona L’imposante forteresse Priamar
                         <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
@@ -114,9 +114,9 @@
             <article class="offre img_factice">
                 <figure>
                     <a href="">Découvrir</a>
-                    <img src="img/mahahual la nature à l'état sauvage.jpg" alt="mahalual" title="mahalual">
+                    <img src="img/Loop-Loop.jpg" alt="Loop-Loop" title="Loop-Loop">
                     <figcaption>
-                        Mahahuai la nature à l’état sauvage
+                        Loop-Loop
                         <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
@@ -125,20 +125,20 @@
         <section id="visite_guidee" class="categorie">
             <article class="offre">
                 <figure>
-                    <a href="chichen itza.html">Découvrir</a>
-                    <img src="img/El-Castillo-Chichen-Itza.jpg" alt="chichen itza" title="chichen itza">
+                    <a href="">Découvrir</a>
+                    <img src="img/civitavecchia.webp" alt="civitavecchia" title="civitavecchia">
                     <figcaption>
-                        Le Chichen Itza
-                        <a href="chichen itza.html">Découvrir</a>
+                        À Civitavecchia, sur la côte tyrrhénienne, les traces du passé étrusque
+                        <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
             <article class="offre img_factice">
                 <figure>
                     <a href="">Découvrir</a>
-                    <img src="img/El-Castillo-Chichen-Itza.jpg" alt="chichen itza" title="chichen itza">
+                    <img src="img/Loop-Loop.jpg" alt="Loop-Loop" title="Loop-Loop">
                     <figcaption>
-                        Le Chichen Itza
+                        Loop-Loop
                         <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
